tests/syntax_error/sizeof_parens.jou
def blah() -> None:
    x = sizeof 1  # Error: value after sizeof must be in parentheses, e.g. sizeof(thing)
